--- a/drive/quickstart/build.gradle
+++ b/drive/quickstart/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = 'DriveQuickstart'
+mainClassName = 'Driveupload'
 sourceCompatibility = 11
 targetCompatibility = 11
 version = '1.0'
